Corrected Detail.cshtml for Fuc

--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/Detail.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Fuc/Detail.cshtml
@@ -29,11 +29,11 @@
 </p>
 <p>
 @Html.Label("Semester: ")
-@Html.DisplayTextFor(n => Model.GetSemesters())
+@Html.DisplayTextFor(n => Model.Semesters)
 </p>
 <p>
 @Html.Label("Prerequisites: ")
-@Html.DisplayTextFor(n => Model.GetPrerequisites())
+@Html.DisplayTextFor(n => Model.Prerequisites)
 </p>
 <p>
 @Html.Label("ECTS: ")
@@ -41,17 +41,17 @@
 </p>
 <p>
 @Html.Label("Objectives: ")
-@Html.DisplayTextFor(n => Model.GetDescription("Objectives"))
+@Html.DisplayTextFor(n => Model.Objectives)
 </p>
 <p>
 @Html.Label("Results: ")
-@Html.DisplayTextFor(n => Model.GetDescription("Results"))
+@Html.DisplayTextFor(n => Model.Results)
 </p>
 <p>
 @Html.Label("Evaluation: ")
-@Html.DisplayTextFor(n => Model.GetDescription("Evalutation"))
+@Html.DisplayTextFor(n => Model.Evaluation)
 </p>
 <p>
 @Html.Label("Program: ")
-@Html.DisplayTextFor(n => Model.GetDescription("Program"))
+@Html.DisplayTextFor(n => Model.Program)
 </p>
