substituted Create views by NewFuc views

--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Home/Index.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Home/Index.cshtml
@@ -16,5 +16,5 @@
 
     }
 @{Html.EndForm();}
-<a href=@Url.Action("Index", "Create")>Create New Fuc</a>
+<a href=@Url.Action("Index", "NewFucProposal")>Create New Fuc</a>
 <a href=@Url.Action("Index", "Fuc")>Fuc List</a>
