--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Home/Index.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Home/Index.cshtml
@@ -16,5 +16,9 @@
 
     }
 @{Html.EndForm();}
-<a href=@Url.Action("Index", "NewFucProposal")>Create New Fuc</a>
+<a href=@Url.Action("Create", "NewFucProposal")>Create New Fuc</a>
+<a href=@Url.Action("Index", "Proposal")>Fuc Proposal List</a>
+<a href=@Url.Action("Index", "NewFucProposal")>New Fuc Proposal List</a>
 <a href=@Url.Action("Index", "Fuc")>Fuc List</a>
+
+
