--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Edit.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Edit.cshtml
@@ -1,58 +1,57 @@
 ﻿@using CourseAplicationLib
-@model Fuc
+@model FucProposal
 
 @{
-    ViewBag.Title = "New Fuc Proposal";
+    ViewBag.Title = "Proposal "+ @Model.Id + " Edit";
 }
 
 <a href=@Url.Action("Index", "Home")>Home</a>
+<h1>Proposal + @Model.Id +  Edit + @Model.User</h1>
 
-<h1>Create New Fuc Proposal</h1>
-
-@using (Html.BeginForm("Create", "NewFucProposal", FormMethod.Post))
-{
+    @using (Html.BeginForm("Edit", "NewFucProposal",new {@id=Model.Id}, FormMethod.Post))
+    {
         <p>
-        @Html.LabelFor(n => Model.Name):
+        @Html.Label("Name")
         @Html.EditorFor(n => Model.Name)
         </p>
         <p>
-        @Html.LabelFor(n => Model.Acr):
+        @Html.Label("Acr")
         @Html.EditorFor(n => Model.Acr)
         </p>
         <p>
-        @Html.LabelFor(n => Model.IsRequired):
+        @Html.Label("Required")
         @Html.EditorFor(n => Model.IsRequired)
         </p>
         <p>
-        @Html.LabelFor(n => Model.Semesters):
+        @Html.Label("Semesters")
         @Html.EditorFor(n => Model.Semesters)
         </p>
         <p>
-        @Html.LabelFor(n => Model.Prerequisites):
+        @Html.Label("Prerequisites")
         @Html.EditorFor(n => Model.Prerequisites)
         </p>
         <p>
-        @Html.LabelFor(n => Model.Ects):
+        @Html.Label("ECTS")
         @Html.EditorFor(n => Model.Ects)
         </p>
         <p>
-        @Html.LabelFor(n => Model.Objectives):
-        @Html.EditorFor(n => Model.Objectives)
+        @Html.Label("Objectives: ")
+         @Html.EditorFor(n => Model.Objectives)
         </p>
         <p>
-        @Html.LabelFor(n => Model.Results):
+        @Html.Label("Results: ") 
         @Html.EditorFor(n => Model.Results)
         </p>
         <p>
-        @Html.LabelFor(n => Model.Evaluation):
+        @Html.Label("Evaluation: ")
         @Html.EditorFor(n => Model.Evaluation)
         </p>
         <p>
-        @Html.LabelFor(n => Model.Program):
+        @Html.Label("Program: ")
         @Html.EditorFor(n => Model.Program)
         </p>
+        
+         <input type="submit" value="submit" />
 
-    <input type="submit" value="submit" />
-
-}
+    }
 @{Html.EndForm();}
