Minor corrections: removed unnecessary 'end for' usage and corrected the display title when consulting the new fuc proposals list

--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Index.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Index.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "New Fuc Proposal List";
 }      
 <a href=@Url.Action("Index", "Home")>Home</a>
-<h1>Fuc Proposal List</h1>
+<h1>New Fuc Proposal List</h1>
 
 <ul>
 @foreach (var f in Model){
