--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Detail.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/NewFucProposal/Detail.cshtml
@@ -7,11 +7,11 @@
 
 <a href=@Url.Action("Index", "Home")>Home</a>
 
-<h1>@Model.Id</h1>
+<h1>@Model.Idx</h1>
 
-@using (Html.BeginForm("Edit", "NewFucProposal", new { @id=Model.Id }, FormMethod.Get))
+@using (Html.BeginForm("Edit", "NewFucProposal", new { @id=Model.Idx }, FormMethod.Get))
 {
-         <input type="submit" value="edit"/>
+         <input type="submit" value="Edit"/>
 }
 
 <p>
@@ -54,3 +54,13 @@
 @Html.Label("Program: ")
 @Html.DisplayTextFor(n => Model.Program)
 </p>
+
+@using (Html.BeginForm("Accept", "NewFucProposal", new {@id=Model.Idx}, FormMethod.Post))
+{
+    <input type="submit" value="Accept"/>
+}
+
+@using (Html.BeginForm("Refuse", "NewFucProposal", new {@id=Model.Idx}, FormMethod.Post))
+{
+    <input type="submit" value="Refuse"/>
+}
