--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Proposal/Edit.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Proposal/Edit.cshtml
@@ -8,7 +8,7 @@
 <a href=@Url.Action("Index", "Home")>Home</a>
 <h1>Proposal + @Model.Idx +  Edit + @Model.User</h1>
 
-    @using (Html.BeginForm("Edit", "Proposal",new {@id=Model.Idx,@acr=Model.Acr}, FormMethod.Post))
+    @using (Html.BeginForm("Edit", "Proposal", new { @id = Model.Idx, @oracr = Model.OriginalAcr }, FormMethod.Post))
     {
         <p>
         @Html.Label("Name")
