--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Home/Login.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Home/Login.cshtml
@@ -8,7 +8,7 @@
 
 <h1>Login</h1>
 
-@using (Html.BeginForm("IndexUser", "Home", FormMethod.Post))
+@using (Html.BeginForm("Login", "Home", FormMethod.Post))
     {
         @Html.LabelFor(n => Model.Name)
         @Html.EditorFor(n => Model.Name)
