--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Home/Index.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Home/Index.cshtml
@@ -5,9 +5,21 @@
 }
 
 <h1>Homepage</h1>
+@if (Request.IsAuthenticated)
+{
+ <text>Welcome <strong>@User.Identity.Name</strong> 
+    @(User.IsInRole("coord") ? "(coord)" : String.Empty) 
+    [ @Html.ActionLink("Log Out", "LogOff", "Account") ]</text>
+    
+    <a href=@Url.Action("Create", "NewFucProposal")>Create New Fuc</a>
+    <a href=@Url.Action("Index", "Proposal")>Fuc Proposal List</a>
+    <a href=@Url.Action("Index", "NewFucProposal")>New Fuc Proposal List</a>
+}
+else
+{
+    @:[ @Html.ActionLink("Log In", "LogOn", "Account") ]
+}
 
-<a href=@Url.Action("Login", "Home")>Login</a>
-<a href=@Url.Action("Create", "NewFucProposal")>Create New Fuc</a>
-<a href=@Url.Action("Index", "Proposal")>Fuc Proposal List</a>
-<a href=@Url.Action("Index", "NewFucProposal")>New Fuc Proposal List</a>
+
+
 <a href=@Url.Action("Index", "Fuc")>Fuc List</a>
