--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Account/LogOn.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Account/LogOn.cshtml
@@ -9,13 +9,15 @@
 <h1>Login</h1>
 
 
-
 @using (Html.BeginForm("LogOn", "Account", new { @ReturnUrl = @ViewData["RetUrl"] }, FormMethod.Post))
     {
-        @Html.LabelFor(n => Model.Name)
-        @Html.EditorFor(n => Model.Name)
-        @Html.LabelFor(n => Model.Pass)
-        @Html.PasswordFor(n => Model.Pass)
+        @Html.LabelFor(m => m.Name)
+        @Html.TextBoxFor(m => m.Name)
+        @Html.ValidationMessageFor(m => m.Name)
+
+         @Html.LabelFor(m => m.Pass)
+        @Html.PasswordFor(m => m.Pass)
+        @Html.ValidationMessageFor(m => m.Pass)
 
          <input type="submit" value="submit" />
     }
