--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Home/Index.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Home/Index.cshtml
@@ -5,11 +5,11 @@
 }
 
 <h1>Homepage</h1>
-@if (Request.IsAuthenticated)
-{
- <text>Welcome <strong>@Membership.GetUser(User.Identity.Name).UserName;</strong> 
-    @(Roles.IsUserInRole(@Membership.GetUser(User.Identity.Name).UserName)? "(coord)" : String.Empty))
-    [ @Html.ActionLink("Log Out", "LogOff", "Account") ]</text>
+@if(Request.IsAuthenticated) {
+    <text>Welcome <strong>@User.Identity.Name</strong> 
+    @(User.IsInRole("Administrator") ? "(Administrator)" : String.Empty) 
+    [ @Html.ActionLink("Log Off", "LogOff", "Account") ]</text>
+
     
     <a href=@Url.Action("Create", "NewFucProposal")>Create New Fuc</a>
     <a href=@Url.Action("Index", "Proposal")>Fuc Proposal List</a>
