--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Home/Index.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Home/Index.cshtml
@@ -8,18 +8,20 @@
 @if(Request.IsAuthenticated) {
     <text>Welcome <strong>@User.Identity.Name</strong> 
     @(User.IsInRole("Administrator") ? "(Administrator)" : String.Empty) 
-    [ @Html.ActionLink("Log Off", "LogOff", "Account") ]</text>
+    [ @Html.ActionLink("Log Off", "LogOff", "Account") ]</text><br />
 
-    
-    <a href=@Url.Action("Create", "NewFucProposal")>Create New Fuc</a>
-    <a href=@Url.Action("Index", "Proposal")>Fuc Proposal List</a>
-    <a href=@Url.Action("Index", "NewFucProposal")>New Fuc Proposal List</a>
+  
+    @Html.ActionLink("Create New Fuc", "Create", "NewFucProposal")<br />   
+    @Html.ActionLink("Fuc Proposal List", "Index", "Proposal")<br />
+    @Html.ActionLink("New Fuc Proposal List", "Index", "NewFucProposal")<br />
+   
 }
 else
 {
-    @:[ @Html.ActionLink("Log In", "LogOn", "Account") ]
+    @:[ @Html.ActionLink("Log In", "LogOn", "Account") ]<br />
 }
 
 
 
-<a href=@Url.Action("Index", "Fuc")>Fuc List</a>
+@Html.ActionLink("Fuc List", "Index", "Fuc")<br />
+@Html.ActionLink("Register","Index","Register")
