proposal and newproposal contrllers specific authorization

--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Account/LogOn.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Account/LogOn.cshtml
@@ -13,6 +13,8 @@
 
 @using (Html.BeginForm("LogOn", "Account", new { @ReturnUrl = @ViewData["RetUrl"] }, FormMethod.Post))
     {
+    
+     @Html.ValidationSummary()
         <fieldset>
             <legend>Login Information</legend>
 
