added teacher number to registation form

--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Register/Index.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Register/Index.cshtml
@@ -21,6 +21,10 @@
         @Html.TextBoxFor(m => m.Username)
         @Html.ValidationMessageFor(m => m.Username)<br />
        
+        @Html.LabelFor(m => m.Number):<br />
+       
+        @Html.TextBoxFor(m => m.Number)
+        @Html.ValidationMessageFor(m => m.Number)<br />
 
         @Html.LabelFor(m => m.Password):<br />
        
