--- a/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Profile/Detail.cshtml
+++ b/Project/CourseAplicationMVC/CourseAplicationMVC/Views/Profile/Detail.cshtml
@@ -26,10 +26,10 @@
     @Html.LabelFor(n => Model.Email)<br/>
     @Html.EditorFor(n => Model.Email)<br/><br/>
    
-    <input type="submit" value="submit" /><br/><br/>
+    <input type="submit" value="save" /><br/><br/>
  }
 
-@Html.ActionLink("Change Password", "ChangePassword", "Account")<br />
+@Html.ActionLink("Change Password", "ChangePassword", "Account")<br/><br/>
 
 @Html.LabelFor(n => Model.Number)<br/>
 @Html.DisplayTextFor(n => Model.Number)<br/><br/>
